--- a/marie.css
+++ b/marie.css
@@ -1,206 +1,158 @@
-
 .controller.custom {
-    background: url(MarieButtons.png); 
-    height: 1080px;
-    width: 1920px;
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344901097273430067/MarieButtons.png?ex=67c29840&is=67c146c0&hm=0d7513073cd943f7fbda5974958c14f671c67426392cc5b2d5704c85bab63de3&);
+    width: 1563px;
+    height: 879px;
+    /*outline: 1px solid black;*/
 }
 
-.custom.disconnected { /* This class shows an image when the controller is disconnected */
-    background: url(MarieButtonsoff.png);
+.controller.custom.disconnected {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344931611044745236/MarieButtonsoff.png?ex=67c2b4ab&is=67c1632b&hm=b6162ffcf77aeb91314016e9ae8ef377c3db4a03cbfea2efb1ed09e1bbb1514a&)
 }
 
 
-.custom .triggers { /* The triggers are housed inside a div, so this sizes the div properly and positions it */
+.custom .dpad .face, .custom .abxy .button, .custom .triggers .trigger-button, .custom .bumpers .bumper {
     width: 180px;
     height: 180px;
     position: absolute;
+}
+
+.custom .dpad .face.up {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344888453065867274/mariealsobuttonbig.png?ex=67c28c7a&is=67c13afa&hm=68128f73eba3ad3202cb17f138b1b5c339beeb158da1e6b0da2cc1fc8953a8cc&);
+    top: 559px;
+    left: 572px;
+    width: 219px;
+    height: 219px;
+}
+
+.custom .dpad .face.up.pressed {
+    /* fuck it */
+    opacity: 0;
+}
+
+.custom .dpad .face.right {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344888452780392531/mariealsobutton.png?ex=67c28c79&is=67c13af9&hm=502a1f3fbf2af297f4ed6d6783d96b5541c7ecaeab2629293fd43e94192b3d41&);
+    top: 227px;
+    left: 506px;
+    width: 180px;
+    height: 180px;
+}
+
+.custom .dpad .face.down {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344888452780392531/mariealsobutton.png?ex=67c28c79&is=67c13af9&hm=502a1f3fbf2af297f4ed6d6783d96b5541c7ecaeab2629293fd43e94192b3d41&);
+    top: 136px;
+    left: 335px;
+    width: 180px;
+    height: 180px;
+}
+
+.custom .dpad .face.left {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344888452780392531/mariealsobutton.png?ex=67c28c79&is=67c13af9&hm=502a1f3fbf2af297f4ed6d6783d96b5541c7ecaeab2629293fd43e94192b3d41&);
+    top: 136px;
     left: 144px;
-    top: 9px;
+    width: 180px;
+    height: 180px;
 }
 
-.custom.disconnected .trigger {
-    display: none;
+.custom .dpad .face.right.pressed {
+    opacity: 0;
 }
 
-.custom .trigger {/* These are the actual triggers themselves */
-    width:180px;
-    height:180px;
-    background: url(mariealsobutton.png);
+.custom .dpad .face.down.pressed {
+    opacity: 0;
 }
 
-.custom .trigger.pressed {
-    background-position: 80px;
-    margin-right: 2px;
+.custom .dpad .face.left.pressed {
+    opacity: 0;
 }
 
-.custom .trigger.left {
-    float: left;
-    margin-left: 1px;
-    margin-top: 1px;
+.custom .abxy .button {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344888452780392531/mariealsobutton.png?ex=67c28c79&is=67c13af9&hm=502a1f3fbf2af297f4ed6d6783d96b5541c7ecaeab2629293fd43e94192b3d41&);
+    width: 180px;
+    height: 180px;
 }
 
-.custom .trigger.right {
-    transform: scaleX(-1);
-    float: right;
-    margin-right: 1px;
-    margin-top; 1px;
+.custom .abxy .button.a {
+    left: 675px;
+    top: 345px;
 }
 
-.custom .bumpers {
-    width: 618px;
-    height: 72px;
-    left: 125px;
-    top:  24px;
-    position: absolute;
+.custom .abxy .button.a.pressed {
+    opacity: 0;
 }
 
-.custom.disconnected .bumpers {
-    display: none;
+.custom .abxy .button.x {
+    left: 689px;
+    top: 143px;
 }
 
-.custom .bumper{
-    width: 179px;
-    height: 70px;
-    background: url(bumpers.png);
-
+.custom .abxy .button.x.pressed {
+    opacity: 0;
 }
 
-.custom .bumper.pressed {
-    background-position: 178px;
+.custom .abxy .button.b {
+    left: 856px;
+    top: 268px;
 }
 
-.custom .bumper.left{
-    float: left;
-}
-.custom .bumper.right{
-    float: right;
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
+.custom .abxy .button.b.pressed {
+    opacity: 0;
 }
 
-
-.custom .sticks {
-    position: absolute;
-    margin-top: 244px;
-    width: 404px;
-    margin-left: 240px;
-    height: 96px;
+.custom .abxy .button.y {
+    left: 866px;
+    top: 67px;
 }
 
-.custom.disconnected .sticks {
-    display: none;
+.custom .abxy .button.y.pressed {
+    opacity: 0;
 }
 
-.custom .stick {
-    position: absolute;
-    background: url(stick.png);
-    height: 95px;
-    width: 98px;
-}
-.custom .stick.pressed.left {
-    background-position-x: -105px;
-}
-.custom .stick.pressed.right{
-    background-position-x: -105px;
-}
-.custom .stick.left{
-    left: 8px;
-}
-	
-.custom .stick.right{
-    top: calc(100% - 95px);
-    left: calc(100% - 128px);
-}
-/* Dpad possitioning and sizing */
-.custom .dpad{
-    position: absolute;
-    width: 127px;
-    height: 127px;
-    top: 110px;
-    left: 144px;
+.custom .trigger-button.right {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344899451906424894/mariealsobuttonalt.png?ex=67c296b8&is=67c14538&hm=0c83bc72ef6d795f2d7ce640fa94ed59851d8740af41aae5f97bed197e2928ad&);
+    width: 180px;
+    height: 180px;
+    left: 1058px;
+    top: 266px;
+    opacity: 0;
 }
 
-.custom.disconnected .dpad {
-    display: none;
+.custom .trigger-button.right.pressed {
+    opacity: 100;
 }
 
-.custom.disconnected .abxy  {
-    display: none;
+.custom .trigger-button.left {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344899451906424894/mariealsobuttonalt.png?ex=67c296b8&is=67c14538&hm=0c83bc72ef6d795f2d7ce640fa94ed59851d8740af41aae5f97bed197e2928ad&);
+    width: 180px;
+    height: 180px;
+    left: 1249px;
+    top: 294px;
+    opacity: 0;
 }
 
-.custom .face{
-    background: url(d-pad.png);
-    position: absolute;
-}
-.custom .face.up, .custom .face.down{
-    width: 42px;
-    height: 49px;
-}
-.custom .face.left, .custom .face.right{
-    width: 49px;
-    height: 43px;
-}
-.custom .face.up{
-    top: 2px;
-    background-position: 322px 0px;
-    left: 42px;
-}
-.custom .face.down{
-    left: 42px;
-    top: 79px;
-    background-position: 228px 0;
+.custom .trigger-button.left.pressed {
+    opacity: 100;
 }
 
-.custom .face.left{
-    background-position: 0px 0;
-    width: 47px;
-    height: 42px;
-    top: 41px;
+.custom .bumper.right {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344888452780392531/mariealsobutton.png?ex=67c28c79&is=67c13af9&hm=502a1f3fbf2af297f4ed6d6783d96b5541c7ecaeab2629293fd43e94192b3d41&);
+    width: 180px;
+    height: 180px;
+    left: 1060px;
+    top: 72px;
 }
 
-.custom .face.right{
-    top: 41px;
-    right: 0px;
-    background-position: -92px 0;
-}
-.custom .face.pressed{
-    background-position-y: 47px;
+.custom .bumper.right.pressed {
+    opacity: 0;
 }
 
-/* Positioning and size of the container for the face buttons */
-.custom .abxy{
-    position: absolute;
-    width: 157px;
-    height: 158px;
+.custom .bumper.left {
+    background: url(https://cdn.discordapp.com/attachments/932231280928620564/1344888452780392531/mariealsobutton.png?ex=67c28c79&is=67c13af9&hm=502a1f3fbf2af297f4ed6d6783d96b5541c7ecaeab2629293fd43e94192b3d41&);
+    width: 180px;
+    height: 180px;
+    left: 1255px;
     top: 95px;
-    left: 587px;
 }
-/* base class used to simplify the sprite mapping */
-.custom .button{
-position: absolute;
-    width: 56px;
-    height: 56px;
-    background: url(face.svgz);
-    // background: url(ps3-assets/face-buttons.png);
-}
-.custom .button.pressed {
-    background-position-y: -57px;
-}
-.custom .a{
-    background-position: 0 0;
-    top: 105px;
-    left: 50px;
-}
-.custom .b{
-    background-position: -56px 0;
-    top: 50px;
-    right: 0px;
-}
-.custom .x{
-    background-position: -113px 0;
-    top: 50px;
-}
-.custom .y{
-    background-position: -168px 0;
-    left: 50px;
+
+.custom .bumper.left.pressed {
+    opacity: 0;
 }
